--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,16 @@
 body {
-    font-family: "Computer Modern Sans", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 20px; /* Cormorant Garamond is a bit smaller, so we increase the size */
+    line-height: 1.6;
+    color: #333;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: 700;
+    color: #222;
+}
+
 
 .container {
     display: flex;
@@ -26,6 +33,7 @@ body {
 nav ul {
     list-style-type: none;
     padding: 0;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 nav ul li {
@@ -34,11 +42,12 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: blue;
+    color: #2c3e50;
+    font-weight: 600; /* Semi-bold for all nav items */
 }
 
 nav ul li a.active {
-    font-weight: bold;
+    font-weight: 700; /* Bold for the active item */
     color: black;
 }
 
