--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .profile-photo {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
+    width: 300px;
+    height: 300px;
+    max-width: 100%;
     display: block;
     margin: 0 auto;
+    object-fit: contain;
 }
 
 nav ul {
