--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Cormorant Garamond', serif;
-    font-size: 20px; /* Cormorant Garamond is a bit smaller, so we increase the size */
+    font-size: 24px; 
     line-height: 1.6;
     color: #333;
 }
