--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,13 @@ a, .social-link {
     transition: color 0.3s ease;
 }
 
+.contact-info {
+    font-size: 16px;
+}
+
 .contact-info img {
-    width: 20px;
+    width: 16px;
+	height: 16px;
     vertical-align: middle;
     margin-right: 5px;
 }
@@ -95,6 +100,10 @@ a, .social-link {
     .sidebar {
         width: 25%;
         margin-right: 5%;
+        position: sticky;  /* This makes the sidebar stick */
+        top: 20px;  /* Adjust this value to set the distance from the top of the viewport */
+        height: calc(100vh - 40px);  /* This sets the height to full viewport height minus top and bottom padding */
+        overflow-y: auto;  /* Allows scrolling within sidebar if content is too tall */
     }
 
     main {
