--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+	line-height: 1.4;
 }
 
 .profile-photo {
@@ -38,7 +39,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 nav ul li a {
@@ -87,7 +88,7 @@ a, .social-link {
     width: 16px;
 	height: 16px;
     vertical-align: middle;
-    margin-right: 5px;
+    margin-right: 4px;
 }
 
 
