--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,12 @@ a, .social-link {
 
 .contact-info {
     font-size: 16px;
+	padding-top: 1px;    
+    padding-bottom: 1px;
+}
+
+.contact-info p {
+    margin: 4px 0;
 }
 
 .contact-info img {
@@ -99,7 +105,7 @@ a, .social-link {
     }
 
     .sidebar {
-        width: 25%;
+        width: 23%;
         margin-right: 5%;
         position: sticky;  /* This makes the sidebar stick */
         top: 20px;  /* Adjust this value to set the distance from the top of the viewport */
@@ -108,6 +114,6 @@ a, .social-link {
     }
 
     main {
-        width: 70%;
+        width: 72%;
     }
 }
