--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 nav ul {
     list-style-type: none;
     padding: 0;
-	margin-bottom: 4px;
+	margin-bottom: 6px;
     font-family: 'Titillium Web', sans-serif;
 }
 
@@ -69,6 +69,11 @@ main a:hover {
     text-decoration: underline;
 }
 
+main p {
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 500;
+}
+
 a:hover, .social-link:hover {
     text-decoration: underline;
 }
@@ -79,8 +84,8 @@ a, .social-link {
 
 .contact-info {
     font-size: 16px;
-	padding-top: 1px;    
-    padding-bottom: 1px;
+	padding-top: 0;    
+    padding-bottom: 0;
 }
 
 .contact-info p {
