--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,6 @@ body {
     font-size: 20px; 
     line-height: 1.6;
     color: #333;
-	margin: 0;
-	min-height: 100vh;
-	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -19,6 +16,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
     padding: 20px;
+	flex: 1;
 }
 
 .sidebar {
