--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
-    margin-bottom: 8px;
+    margin-bottom: 6px;
 	line-height: 1.2;
 }
 
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 nav ul {
     list-style-type: none;
     padding: 0;
-	margin-bottom: 8px;
+	margin-bottom: 6px;
     font-family: 'Titillium Web', sans-serif;
 }
 
@@ -107,15 +107,15 @@ a, .social-link {
     }
 
     .sidebar {
-        width: 25%;
+        width: 23%;
         margin-right: 5%;
-        position: sticky;
-        top: 20px; 
-        height: calc(100vh - 40px); 
-        overflow-y: auto;
+        position: sticky;  /* This makes the sidebar stick */
+        top: 20px;  /* Adjust this value to set the distance from the top of the viewport */
+        height: calc(100vh - 40px);  /* This sets the height to full viewport height minus top and bottom padding */
+        overflow-y: auto;  /* Allows scrolling within sidebar if content is too tall */
     }
 
     main {
-        width: 30%;
+        width: 72%;
     }
 }
