--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ h1, h2, h3, h4, h5, h6 {
 .container {
     display: flex;
     flex-direction: column;
-    padding: 0, 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .sidebar {
