--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 300px;
     max-width: 100%;
     display: block;
-    margin: 0 auto;
+    margin: 20px auto 0;
     object-fit: contain;
 }
 
