--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     font-size: 20px; 
     line-height: 1.6;
     color: #333;
+	background-color: #fffff0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,8 +21,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
-    margin-bottom: 10px;
-	line-height: 1.2;
+    margin-bottom: 8px;
+	line-height: 1.4;
+	padding-top: 20px;
 }
 
 .profile-photo {
@@ -36,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
 nav ul {
     list-style-type: none;
     padding: 0;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
     font-family: 'Titillium Web', sans-serif;
 }
 
