--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,22 @@ a, .social-link {
     
     .sidebar-content {
         display: flex;
-        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+    
+    .mobile-name {
+        display: block;
+        width: 100%;
+        order: -1;
+        margin-bottom: 20px;
+        font-family: 'Titillium Web', sans-serif;
+        font-weight: 600;
+        font-size: 24px;
+        color: #222;
+    }
+
+    .photo-info-container {
+        display: flex;
         align-items: flex-start;
     }
     
@@ -129,18 +144,7 @@ a, .social-link {
     
     .sidebar-info {
         flex: 1;
-        min-width: 0; /* This allows the sidebar info to shrink if needed */
-    }
-    
-    .mobile-name {
-        display: block;
-        width: 100%;
-        order: -1;
-        margin-bottom: 20px;
-        font-family: 'Titillium Web', sans-serif;
-        font-weight: 600;
-        font-size: 24px;
-        color: #222;
+        min-width: 0;
     }
     
     main h1 {
