--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,11 @@ nav ul li a.active {
     font-weight: 600; 
 }
 
+.paper-link {
+    color: #2c3e50;
+    font-weight: 600; 
+}
+
 main {
     width: 100%; 
     max-width: none;
