--- a/css/main.css
+++ b/css/main.css
@@ -58,12 +58,13 @@ nav ul li a.active {
 
 .paper-entry {
     font-size: 22px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .paper-title {
     font-weight: bold;
     text-decoration: underline;
+	color: #2c3e50;
 }
 
 .paper-date {
