--- a/css/main.css
+++ b/css/main.css
@@ -58,18 +58,17 @@ nav ul li a.active {
 
 .paper-entry {
     font-size: 22px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
-.paper-title {
+.paper-entry a {
+    color: #2980b9;
+    text-decoration: none;
     font-weight: bold;
-    text-decoration: underline;
-	color: #2c3e50;
 }
 
-.paper-date {
-    font-weight: normal;
-    margin-left: 10px;
+.paper-entry a:hover {
+    text-decoration: underline;
 }
 
 main {
