--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ nav ul li a.active {
 }
 
 .paper-entry a {
-    color: #2980b9;
+    color: #2c3e50;
     text-decoration: none;
     font-weight: bold;
 }
