--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ nav ul li a.active {
     text-decoration: underline;
 }
 
+.paper-follow-up {
+	margin_top: 2px
+}
+
 main {
     width: 100%; 
     max-width: none;
