--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,6 @@ nav ul li a.active {
 .paper-entry {
     font-size: 24px;
 	margin-bottom: 0px;
-	line-height: 1.2;
 }
 
 .paper-entry a {
@@ -74,7 +73,7 @@ nav ul li a.active {
 
 .paper-follow-up {
 	margin-top: 0;
-	line-height: 1.2;
+	margin-bottom: 0;
 }
 
 main {
