--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ nav ul li a.active {
     color: #2c3e50;
     text-decoration: none;
     font-weight: bold;
+    line-height: 1.4;
 }
 
 .paper-entry a:hover {
@@ -74,6 +75,7 @@ nav ul li a.active {
 .paper-follow-up {
 	margin-top: 0;
 	margin-bottom: 0;
+    line-height: 1.4;
 }
 
 main {
@@ -118,6 +120,33 @@ a, .social-link {
     height: 12px;
     vertical-align: middle;
     margin-right: 4px;
+}
+
+.abstract-container {
+  margin-top: 10px;
+}
+
+.abstract-toggle {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.abstract-toggle .arrow {
+  display: inline-block;
+  transition: transform 0.3s;
+}
+
+.abstract-content {
+  display: none;
+  margin-top: 10px;
+}
+
+.abstract-container.active .abstract-content {
+  display: block;
+}
+
+.abstract-container.active .arrow {
+  transform: rotate(180deg);
 }
 
 @media screen and (max-width: 767px) {
